added bootstrap sass and created elements:

--- a/stylesheets/sass/_config.sass
+++ b/stylesheets/sass/_config.sass
@@ -1,9 +1,19 @@
-// Colors
-$base:      #34495e
-$firm:      #1abc9c
+//	Palette - CHANGE THESE, NOT THE ONES BELOW
+$blue-light: #38EFF8
+$blue: #152D2E
+$blue-dark: #0D2526
+$gray-light: #eceff1
+$gray-dark: #bdc1c5
+$orange: #FF851C
+$yellow: #FFE500
 
-$gray:      #95a5a6
-$lightgray: #ecf0f1
+
+// Colors
+$base:      $blue
+$firm:      $orange
+
+$gray:      $gray-dark
+$lightgray: $gray-light
 $inverse:   #fff
 
 $success:   #2ecc71
@@ -11,14 +21,6 @@ $danger:    #e74c3c
 $warning:   #f1c40f
 $info:      #3498db
 
-$blue-light: #38EFF8
-$blue: #152D2E
-$blue-dark: #0D2526
-$gray-light: #BDC1C5
-$gray-dark: #34495E
-$orange: #FF851C
-$yellow: #FFE500
-
 // Font
-$base-font-family: 'Lato', sans-serif
+$base-font-family: 'Open Sans', sans-serif
 $base-font-size:   14px
