--- a/stylesheets/sass/flat-ui.sass
+++ b/stylesheets/sass/flat-ui.sass
@@ -2,6 +2,7 @@
 
 // Loading custom fonts
 @import url('http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic')
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,700')
 @import 'icon-font'
 @import 'icon-font-24'
 
