--- a/stylesheets/sass/modules/_type.sass
+++ b/stylesheets/sass/modules/_type.sass
@@ -1,7 +1,7 @@
 // Typography
 body
   color: $base
-  font: #{$base-font-size}/#{1.231} 'Lato', sans-serif
+  font: #{$base-font-size}/#{1.231} 'Open Sans', sans-serif
 
 a
   color: $firm
