added id hooks for appending json data, detailed place view, web & mobile nav

--- a/stylesheets/sass/modules/_btn.sass
+++ b/stylesheets/sass/modules/_btn.sass
@@ -56,6 +56,16 @@
   &.btn-warning
     +button-states($warning)
 
+  &.btn-fancy
+    color: $blue
+    &:hover,
+    &:focus
+      color: $blue
+    &:active,
+    &.active
+      color: rgba($blue, .75)
+    +button-states($yellow)
+
   // Button with icon inside
   .btn-toolbar &
     font-size: 18px
