--- a/stylesheets/flat-ui.css
+++ b/stylesheets/flat-ui.css
@@ -1,4 +1,3 @@
-@import url("http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic");
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,700");
 @font-face {
   font-family: "Flat-UI-Icons-16";
@@ -287,6 +286,17 @@ h6 {
       background-color: #f4d03f; }
     .btn.btn-warning:active, .btn.btn-warning.active {
       background-color: #cea70c; }
+  .btn.btn-fancy {
+    color: #152d2e;
+    background-color: #ffe500; }
+    .btn.btn-fancy:hover, .btn.btn-fancy:focus {
+      color: #152d2e; }
+    .btn.btn-fancy:active, .btn.btn-fancy.active {
+      color: rgba(21, 45, 46, 0.75); }
+    .btn.btn-fancy:hover, .btn.btn-fancy:focus {
+      background-color: #ffea33; }
+    .btn.btn-fancy:active, .btn.btn-fancy.active {
+      background-color: #d9c300; }
   .btn-toolbar .btn {
     font-size: 18px;
     padding: 10px 14px 9px; }
